an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
09/12/2025:
[+] Added Funny Shooter 2 (Thanks for the suggestion!)

09/10/2025:
[!] Sorry for all the broken games. A lot of the games broke during the time
I was gone. I have fixed most of them though.
[+] Fixed Duck Life 1-4
[+] Fixed Ace Gangster Taxi
[+] Fixed Bad Ice Cream
[+] Fixed Pac Man
[+] Fixed Bad Time Simulator
[+] Fixed Bloons Tower Defense 1 & 3
[+] Fixed Bob the Robber 2
[+] Fixed Bottle Flip
[-] Removed Chick End (Couldn't find a backup sorry)
[-] Removed Cookie Clicker
[+] Fixed Fly or Die
[+] Fixed a bunch of other games, not gonna list them all

09/09/2025:
[+] Big update to the UI.
[+] Added categories (will do more with this later)
[-] Removed tab styles (these weren't used and have been broken forever)
[+] Added Subway Surfers (This took forever to get done. I finally did it)
[+] Fixed most flash games that used waflash before. They've all been
converted to Ruffle and should launch fine. (Submit a bug report if a game
doesn't load still)
[!] *MAYBE* there will be more Poki, CrazyGames, and maybe CoolMathGames
exclusives very soon. Poki SDK has been mostly cracked, but I'll look into
cracking the others.

09/05/2025:
[!] Hi everyone! I know it's been a while but I'm back! I'll try my best to
update this as frequently as before.
[+] Added Drive Mad (Thanks for the suggestion)
[+] Fixed Block Blast (Thanks for the bug report Joe)

05/09/2025:
[+] Fixed Retro Bowl not launching, the original webserver got deleted so I
had to manually remake it.
[!] Drift Boss and Skibidi Toilet (the best game to touch the Earth) *may?*