@@ -119,7 +119,7 @@
 <body>
     <div id="snow" data-count="200"></div>
     <h1 class="centered">Welcome to the No Name Games External Launcher!</h1>
-    <h3 class="centered">Last update: September 12th, 2025. <a href="javascript:openchangelog()">View changelog</a></h3>
+    <h3 class="centered">Last update: September 13th, 2025. <a href="javascript:openchangelog()">View changelog</a></h3>
     <center>
         <button onclick="window.open('https://forms.gle/iFA6kCTM8AcctsrEA')">Go to bug report form</button>
         <button onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Go to suggestion/feedback form</button>
