@@ -20,6 +20,9 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+09/13/2025:
+[+] Added Ragdoll Archers (Thanks for the suggestion Kaden!)
+
 09/12/2025:
 [+] Added Funny Shooter 2 (Thanks for the suggestion!)
 
